Added tests, corrected infinite loop